near-sdk/compilation_tests/payable_view.stderr
error: View function can't be payable.
  --> $DIR/payable_view.rs:12:5
   |
12 |     #[payable]
   |     ^
